--- a/confirm.css
+++ b/confirm.css
@@ -4,14 +4,15 @@
   background-image: url("./img/image 67.png");
   background-size: cover;
 }
-.confirm{
+.confirm {
   display: flex;
   flex-direction: column;
   width: 100%;
   max-width: 528px;
   font-size: 24px;
 }
-.submit{
+
+.submit {
   border: none;
   border-radius: 7px;
   margin-top: 26px;
@@ -22,13 +23,56 @@
   font-weight: bold;
   color: #190f27;
 }
-a.link{
-border-bottom: 3px solid #284642;
-text-decoration: none;
-font-size: 14px;
-color: #64606a;
+.checkboxInput {
+  display: flex;
+  align-items: center;
+  margin-top: 16px;
 }
-.login  {
+
+#terms {
+  display: none;
+}
+
+label[for="terms"] {
+  position: relative;
+  display: inline-block;
+  margin-right: 10px;
+  padding-left: 30px;
+  user-select: none;
+  cursor: pointer;
+  font-size: 14px;
+  color: #64606a;
+}
+
+label[for="terms"]::before {
+  content: "";
+  position: absolute;
+  left: 0;
+  top: 50%;
+  display: inline-block;
+  transform: translateY(-50%);
+  border: 2px solid #aaa;
+  border-radius: 3px;
+  width: 20px;
+  height: 20px;
+}
+
+input[type="checkbox"]:checked + label[for="terms"]::before {
+  content: "\2713";
+  background-color: #284642;
+  text-align: center;
+  font-size: 16px;
+  line-height: 20px;
+  color: #fff;
+}
+
+a.link {
+  border-bottom: 3px solid #284642;
+  text-decoration: none;
+  font-size: 14px;
+  color: #64606a;
+}
+.login {
   margin-top: 24px;
   font-size: 14px;
   color: #64606a;
