--- a/login.css
+++ b/login.css
@@ -1,3 +1,6 @@
+button {
+  cursor: pointer;
+}
 .bgi {
 	width: 100%;
 	height: 100%;
@@ -6,63 +9,66 @@
 	background-repeat: no-repeat;
 }
 .login {
-	position: relative;
-	display: flex;
-	flex-direction: column;
-	justify-content: center;
-	width: 100%;
-	max-width: 528px;
-	font-size: 24px;
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  width: 100%;
+  max-width: 528px;
+  font-size: 24px;
 }
 .login > p {
-	margin-bottom: 48px;
-	margin-top: 88px;
-	font-size: 24px;
-	font-weight: bold;
-	color: #190f27;
+  margin-bottom: 48px;
+  margin-top: 88px;
+  font-size: 24px;
+  font-weight: bold;
+  color: #190f27;
 }
 
 .login > button {
-	cursor: pointer;
-	display: flex;
-	align-items: center;
-	justify-content: center;
-	margin-bottom: 16px;
-	border: 2px solid #284642;
-	border-radius: 7px;
-	height: 50px;
-	background-color: white;
-	font-size: 14px;
-	font-weight: 500;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-bottom: 16px;
+  border: 2px solid #284642;
+  border-radius: 7px;
+  height: 50px;
+  background-color: white;
+  font-size: 14px;
+  font-weight: 500;
 }
-.login > button > img{
+.login > button > img {
   padding-right: 20px;
 }
-.login button:nth-of-type(2){
+
+.login button:nth-of-type(2) {
   margin-bottom: 32px;
 }
+
 .submit {
   margin-top: 26px;
   border: none;
   border-radius: 7px;
   width: 100%;
   height: 50px;
-  background-color: #ff6939 ;
+  background-color: #ff6939;
   font-size: 18px;
   font-weight: 700;
   color: #190f27;
 }
-.checkboxInput{
+
+.checkboxInput {
   display: flex;
   justify-content: space-between;
-  /* align-items: center; */
+  align-items: center;
   margin-top: 16px;
 }
+
 #rememberCheckbox {
   display: none;
 }
-label[for="rememberCheckbox"]{
-  content: "";
+
+label[for="rememberCheckbox"] {
   position: relative;
   display: inline-block;
   margin-right: 10px;
@@ -73,7 +79,7 @@ label[for="rememberCheckbox"]{
   color: #64606a;
 }
 
-label[for="rememberCheckbox"]::before{
+label[for="rememberCheckbox"]::before {
   content: "";
   position: absolute;
   left: 0;
@@ -86,7 +92,7 @@ label[for="rememberCheckbox"]::before{
   height: 20px;
 }
 
-input[type="checbox"]:checked + label[for="rememberCheckbox"]::before{
+input[type="checkbox"]:checked + label[for="rememberCheckbox"]::before {
   content: "\2713";
   background-color: #284642;
   text-align: center;
@@ -95,19 +101,24 @@ input[type="checbox"]:checked + label[for="rememberCheckbox"]::before{
   color: #fff;
 }
 
-a, .register{
+a {
+  font-size: 14px;
+  color: #64606a;
+}
+.register {
   font-size: 14px;
   color: #64606a;
 }
 
-.inline{
+.inline {
   display: inline;
 }
-@media (max-width:600px) {
-  a{
+
+@media (max-width: 600px) {
+  a {
     font-size: 12px;
   }
-  label[for="rememberCheckbox"]{
+  label[for="rememberCheckbox"] {
     font-size: 12px;
   }
   .register > button {
