--- a/global.css
+++ b/global.css
@@ -45,6 +45,7 @@ main {
   display: flex;
   flex-direction: column;
   align-items: center;
+  justify-content: center;
   overflow: auto;
   width: 100%;
   max-width: 45%;
